--- a/src/styles/productcard.module.css
+++ b/src/styles/productcard.module.css
@@ -66,4 +66,7 @@
   .productCard h2{
     padding: 0.5em 0;
   }
+  .productBody {
+    margin: 0;
+  }
 }
